--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ chrono = { version = "0.4", optional = true }
 clap = "2.23.0"
 counted-array = "0.1"
 directories = "1"
-env_logger = "0.5"
 error-chain = { version = "0.12.1", default-features = false }
 filetime = "0.2"
 flate2 = { version = "1.0", optional = true, default-features = false, features = ["rust_backend"] }
@@ -49,6 +48,12 @@ lazy_static = "1.0.0"
 libc = "0.2.10"
 local-encoding = "0.2.0"
 log = "0.4"
+slog = "2.5"
+slog-async = "2.5"
+slog-envlogger = "2.2"
+slog-scope = "4.3"
+slog-stdlog = "4.0"
+slog-term = "2.5"
 lru-disk-cache = { path = "lru-disk-cache", version = "0.4.0" }
 md-5 = { version = "0.8", optional = true }
 memcached-rs = { version = "0.3" , optional = true }
