--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,9 @@ lazy_static = "1.0.0"
 libc = "0.2.10"
 local-encoding = "0.2.0"
 log = "0.4"
-slog = "2.5"
+slog = { version = "2.5", features = ["max_level_trace", "release_max_level_trace"] }
 slog-async = "2.5"
+slog-bunyan = "2.2"
 slog-envlogger = "2.2"
 slog-scope = "4.3"
 slog-stdlog = "4.0"
